# battery-degradation-oxford-lightgbm-lstm

./: .gitignore  README.md  pyproject.toml
artifacts/: lgbm_features.txt  lgbm_model.txt  lstm_metrics.json  lstm_model.pt  lstm_predictions.npy  lstm_scaler.npz  metrics.json
data/processed/: oxford_capacity_trends.csv  sequences_next_capacity.npz  tabular_next_capacity.csv
scripts/: build_supervised.py  make_features.py
src/eval/: __init__.py  eval_compare.py
src/models/: predict_lstm.py  train_lgbm.py  train_lstm.py
