[project]
name = "battery-oxford-compare"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Meghana Thota", email = "Meghana-thota@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
battery-oxford-compare = "battery_oxford_compare:main"

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"
